--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "lodash.debounce": "4.0.8",
     "lodash.uniqueid": "4.0.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
-    "styled-components": "5.1.1"
+    "styled-components": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
